Prevent dashboard widget title from overflowing

--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -1894,3 +1894,19 @@ a.dashboard-link:hover {
 .container-list-main {
   min-width: 592px;
 }
+
+.widget-title .row-fluid {
+  position: relative;
+}
+
+.widget-title .row-fluid .pull-left {
+  position: absolute;
+  right: 16px;
+  left: 0;
+}
+
+.widget-title .row-fluid .pull-left editable-property div {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
